--- a/functions/package.json
+++ b/functions/package.json
@@ -16,9 +16,12 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-function": "^1.4.121",
+    "firebase-functions": "^6.0.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
